src/css/components/output/_css-output.scss
.css-output{
    // Basic color scheme taken from Prism and then modified:
    // http://prismjs.com/

    .css-text{
        @include block();

        .comment{
            color: slategray;
        }

        .bracket, .colon, .semicolon{
            color:#999;
        }

        .selector{
            color:#690;
        }

        .name{
            color: #905;
        }

        .value{
            color:#222;
        }        

        .variable{
            color:#e90;
        }

        .key-word{
            color:#07a;
        }
    }

    .minified{
        overflow-x:hidden;

        *{
            display:inline;
            word-wrap:break-word;
        }

        .indent, .space, .unminified-comment{
            display:none;
        }
    }    

    .unminified{
        wbr{
            display:none;
        }
    }
}

@media #{$medium-plus}{
    .css-output{
        width:25%;
    
        .ui-column-header{
            width:25%;
        }
    }
}

